# Wipe-Forge

./: .gitignore  README.md  pyproject.toml
packaging/: PKGBUILD
scripts/: wipeforge
wipeforge/: __main__.py  main.py
wipeforge/core/: detection.py  lock.py  models.py
wipeforge/engine/: decision.py  verify.py  wipe.py
wipeforge/tui/: app.py
wipeforge/utils/: logger.py
wipeforge/worker/: process.py
