[project]
name = "wipeforge"
version = "0.1.0"
description = "Secure Disk Destruction Tool"
authors = [{name = "Priyanshu"}]
requires-python = ">=3.11"

dependencies = [
    "textual",
    "pyudev",
    "psutil"
]

[project.scripts]
wipeforge = "wipeforge.main:entry"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["wipeforge"]